--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -25,11 +25,12 @@ jobs:
   # 1. Secret Scanning (Gitleaks)
   ###########################################
   secret-scanning:
-    name: Secret Scanning (Gitleaks)
+    name: Secret Scanning
     runs-on: ubuntu-latest
+    outputs:
+      gl_count: ${{ steps.count.outputs.gl_count }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -39,20 +40,12 @@ jobs:
           GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }}
         with:
           args: detect --source . --verbose --redact --no-fail
-  
-      - name: Export Gitleaks Report
+
+      - name: Count Gitleaks issues
+        id: count
         run: |
-          gitleaks detect \
-            --source . \
-            --report-path=gitleaks-report.json \
-          --verbose || true
-
-      - name: Upload Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: gitleaks-report
-          path: gitleaks-report.json
-
+          GL_COUNT=$(gitleaks detect --source . --report-format json | jq 'length')
+          echo "gl_count=$GL_COUNT" >> $GITHUB_OUTPUT
 
   ###########################################
   # 2. OWASP Dependency Check
@@ -60,9 +53,10 @@ jobs:
   owasp-dependency-check:
     name: OWASP Dependency-Check
     runs-on: ubuntu-latest
+    outputs:
+      dc_count: ${{ steps.count.outputs.dc_count }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Run OWASP Dependency-Check
         uses: dependency-check/Dependency-Check_Action@1.1.0
@@ -71,12 +65,11 @@ jobs:
           path: "./"
           format: "HTML"
 
-      - name: Upload dependency-check report
-        uses: actions/upload-artifact@v4
-        with:
-          name: dependency-check-report
-          path: reports/
-
+      - name: Count Dependency-Check issues
+        id: count
+        run: |
+          DC_COUNT=$(grep -i -c 'vulnerability' reports/*.html || echo 0)
+          echo "dc_count=$DC_COUNT" >> $GITHUB_OUTPUT
 
   ###########################################
   # 3. Checkov IaC Scan
@@ -84,12 +77,12 @@ jobs:
   checkov-scan:
     name: Checkov IaC Scan
     runs-on: ubuntu-latest
+    outputs:
+      ckv_count: ${{ steps.count.outputs.ckv_count }}
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
@@ -97,34 +90,26 @@ jobs:
         run: pip install checkov
 
       - name: Run Checkov scan
+        run: checkov -d infrastructure --download-external-modules true --soft-fail -o json --output-file-path checkov-report.json
+
+      - name: Count Checkov issues
+        id: count
         run: |
-          checkov -d infrastructure \
-            --download-external-modules true \
-            --soft-fail \
-            -o json \
-            --output-file-path checkov-report.json
-
-      - name: Upload report
-        uses: actions/upload-artifact@v4
-        with:
-          name: checkov-report
-          path: checkov-report.json
-
+          CKV_COUNT=$(jq '.results.failed_checks | length' checkov-report.json 2>/dev/null || echo 0)
+          echo "ckv_count=$CKV_COUNT" >> $GITHUB_OUTPUT
 
   ###########################################
   # 4. SonarCloud Code Analysis
   ###########################################
   sonarcloud-analysis:
-    name: SonarCloud Code Analysis
+    name: SonarCloud Analysis
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Set up Java
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
@@ -142,7 +127,6 @@ jobs:
             -Dsonar.coverage.exclusions=Backend/server.js,aiops/**
             -Dsonar.qualitygate.wait=true
 
-
   ###########################################
   # 5. Cache Docker Layers
   ###########################################
@@ -150,11 +134,9 @@ jobs:
     name: Cache Docker Layers
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-buildx-action@v3
 
       - name: Restore layer cache
         uses: actions/cache@v4
@@ -164,41 +146,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          tags: ${{ env.ECR_REPOSITORY }}:${{ github.sha }}
-          load: true
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
-
-      - name: Save updated cache
-        uses: actions/cache@v4
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile') }}
-
-
   ###########################################
   # 6. Build, Scan, and Push Docker Image
   ###########################################
-  build-scan-and-push:
-    name: Build, Scan, and Push Docker Image
+  build-and-deploy:
+    name: Build, Scan, Push Docker
     runs-on: ubuntu-latest
-    needs:
-      - secret-scanning
-      - owasp-dependency-check
-      - checkov-scan
-      - sonarcloud-analysis
-      - cache-docker-layers
+    needs: [secret-scanning, owasp-dependency-check, checkov-scan, sonarcloud-analysis, cache-docker-layers]
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-buildx-action@v3
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -207,10 +165,9 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v2
+      - uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build Docker image using Buildx with cache
+      - name: Build Docker image with cache
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -230,12 +187,11 @@ jobs:
           severity: 'CRITICAL,HIGH'
           exit-code: '0'
 
-      - name: Upload Trivy results to GitHub Security Dashboard
-        uses: github/codeql-action/upload-sarif@v4
+      - uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: trivy-results.sarif
 
-      - name: Tag and Push Docker image to ECR
+      - name: Tag and push to ECR
         run: |
           IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}
           docker tag ${{ env.ECR_REPOSITORY }}:${{ github.sha }} $IMAGE_URI:latest
@@ -253,92 +209,22 @@ jobs:
           docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:$IMAGE_TAG
           docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest
 
-
   ###########################################
-  # 7. Notify Success
+  # 7. Notify Slack
   ###########################################
-  notify-success:
-    name: Send Success Notification
+  notify-slack:
+    name: Send Slack Notification
     runs-on: ubuntu-latest
-    needs: [sonarcloud-analysis, build-scan-and-push]
-    if: success()
+    needs: [secret-scanning, owasp-dependency-check, checkov-scan, build-and-deploy]
     steps:
-      - name: Send Slack Success Notification
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        run: |
-          curl -X POST -H 'Content-type: application/json' \
-          --data "{\"text\":\"✅ *CI Pipeline Succeeded!*\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\nImage pushed to ECR successfully.\"}" \
-          "$SLACK_WEBHOOK_URL"
-
-
-  ###########################################
-  # 8. Notify Failure
-  ###########################################
-  notify-failure:
-    name: Send Failure Notification
-    runs-on: ubuntu-latest
-    needs: [sonarcloud-analysis, build-scan-and-push]
-    if: failure()
-    steps:
-      - name: Send Slack Failure Notification
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        run: |
-          curl -X POST -H 'Content-type: application/json' \
-          --data "{\"text\":\"❌ *CI Pipeline Failed!*\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\"}" \
-          "$SLACK_WEBHOOK_URL"
-
-
-  ###########################################
-  # 9. Notify Security Scan Results
-  ###########################################
-  notify-security:
-    name: Send Security Scan Results
-    runs-on: ubuntu-latest
-    needs: [secret-scanning, owasp-dependency-check, checkov-scan]
-    if: always()
-    steps:
-      - name: Download Gitleaks report
-        uses: actions/download-artifact@v4
-        with:
-          name: gitleaks-report
-          path: reports/gitleaks
-
-      - name: Download Dependency-Check report
-        uses: actions/download-artifact@v4
-        with:
-          name: dependency-check-report
-          path: reports/dependency-check
-
-      - name: Download Checkov report
-        uses: actions/download-artifact@v4
-        with:
-          name: checkov-report
-          path: reports/checkov
-
-      - name: Count issues
-        id: count-issues
-        run: |
-        
-          # Gitleaks (JSON array)
-          GL_COUNT=$(jq 'length' reports/gitleaks/gitleaks-report.json 2>/dev/null || echo 0)
-      
-          # Dependency-Check (HTML contains "vulnerability")
-          DC_COUNT=$(grep -i -c 'vulnerability' reports/dependency-check/*.html 2>/dev/null || echo 0)
-      
-          # Checkov
-          CKV_COUNT=$(jq '.results.failed_checks | length' reports/checkov/checkov-report.json 2>/dev/null || echo 0)
-      
-          echo "gl_count=$GL_COUNT" >> $GITHUB_ENV
-          echo "dc_count=$DC_COUNT" >> $GITHUB_ENV
-          echo "ckv_count=$CKV_COUNT" >> $GITHUB_ENV
-
       - name: Send Slack Notification
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          GL_COUNT: ${{ needs.secret-scanning.outputs.gl_count }}
+          DC_COUNT: ${{ needs.owasp-dependency-check.outputs.dc_count }}
+          CKV_COUNT: ${{ needs.checkov-scan.outputs.ckv_count }}
         run: |
           STATUS=$([[ "${{ job.status }}" == "success" ]] && echo "✅ Success" || echo "❌ Issues Found")
           curl -X POST -H 'Content-type: application/json' \
-          --data "{\"text\":\"*Security Scan Results*\\nStatus: $STATUS\\nGitleaks secrets: $GL_COUNT\\nOWASP Dependency-Check issues: $DC_COUNT\\nCheckov IaC issues: $CKV_COUNT\\nRepository: $GITHUB_REPOSITORY\\nBranch: $GITHUB_REF_NAME\\nCommit: $GITHUB_SHA\"}" \
+          --data "{\"text\":\"*CI/CD Pipeline Status*\\nStatus: $STATUS\\nGitleaks secrets: $GL_COUNT\\nOWASP Dependency-Check issues: $DC_COUNT\\nCheckov IaC issues: $CKV_COUNT\\nRepository: $GITHUB_REPOSITORY\\nBranch: $GITHUB_REF_NAME\\nCommit: $GITHUB_SHA\"}" \
           "$SLACK_WEBHOOK_URL"
