--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -135,7 +135,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: docker/setup-buildx-action@v3
+
       - name: Restore layer cache
         uses: actions/cache@v4
         with:
@@ -153,14 +155,18 @@ jobs:
     needs: [secret-scanning, owasp-dependency-check, checkov-scan, sonarcloud-analysis, cache-docker-layers]
     steps:
       - uses: actions/checkout@v4
+
       - uses: docker/setup-buildx-action@v3
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
+
       - uses: aws-actions/amazon-ecr-login@v2
+
       - name: Build Docker image with cache
         uses: docker/build-push-action@v5
         with:
@@ -170,6 +176,7 @@ jobs:
           load: true
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+
       - name: Scan Docker image with Trivy
         uses: aquasecurity/trivy-action@0.28.0
         with:
@@ -179,9 +186,11 @@ jobs:
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
           exit-code: '0'
+
       - uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: trivy-results.sarif
+
       - name: Tag and push to ECR
         run: |
           IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}
@@ -189,6 +198,7 @@ jobs:
           docker tag ${{ env.ECR_REPOSITORY }}:${{ github.sha }} $IMAGE_URI:${{ github.sha }}
           docker push $IMAGE_URI:latest
           docker push $IMAGE_URI:${{ github.sha }}
+
       - name: Push Docker image to Docker Hub
         run: |
           echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
@@ -200,67 +210,60 @@ jobs:
           docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest
 
   ###########################################
-  # 7. Slack Notification – Pipeline Status
+  # 7. Pipeline Slack Notifications
   ###########################################
-  notify-pipeline:
-    name: Slack Notification – Pipeline Status
+  notify-success:
+    name: Send Success Notification
     runs-on: ubuntu-latest
-    needs: [build-and-deploy]
+    needs: [sonarcloud-analysis, build-and-deploy]
+    if: success()
     steps:
-      - name: Send Pipeline Status to Slack
+      - name: Send Slack Success Notification
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         run: |
-          STATUS=$([[ "${{ job.status }}" == "success" ]] && echo "✅ Success" || echo "❌ Failure")
           curl -X POST -H 'Content-type: application/json' \
-          --data "{\"text\":\"*CI/CD Pipeline Status*\\nStatus: $STATUS\\nRepository: $GITHUB_REPOSITORY\\nBranch: $GITHUB_REF_NAME\\nCommit: $GITHUB_SHA\"}" \
+          --data "{\"text\":\"✅ *CI Pipeline Succeeded!*\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\nImage pushed to ECR successfully.\"}" \
           "$SLACK_WEBHOOK_URL"
 
-  #####################################
-  # 8. Notify Security Results to Slack
-  #####################################
+  notify-failure:
+    name: Send Failure Notification
+    runs-on: ubuntu-latest
+    needs: [sonarcloud-analysis, build-and-deploy]
+    if: failure()
+    steps:
+      - name: Send Slack Failure Notification
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+          --data "{\"text\":\"❌ *CI Pipeline Failed!*\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\"}" \
+          "$SLACK_WEBHOOK_URL"
+
+  ###########################################
+  # 8. Security Scan Slack Notification
+  ###########################################
   notify-security:
     name: Send Security Scan Results
     runs-on: ubuntu-latest
     needs: [secret-scanning, owasp-dependency-check, checkov-scan]
     if: always()
     steps:
-      - name: Download Gitleaks Report
-        uses: actions/download-artifact@v4
-        with:
-          name: gitleaks-report
-          path: reports/gitleaks
-        continue-on-error: true
-  
-      - name: Download Dependency-Check Report
-        uses: actions/download-artifact@v4
-        with:
-          name: dependency-check-report
-          path: reports/dependency-check
-        continue-on-error: true
-  
-      - name: Download Checkov Report
-        uses: actions/download-artifact@v4
-        with:
-          name: checkov-report
-          path: reports/checkov
-        continue-on-error: true
-  
-      - name: Prepare Summary
-        run: |
-          GL_COUNT=$(jq 'length' reports/gitleaks/gitleaks-report.json 2>/dev/null || echo 0)
-          DC_COUNT=$(grep -c '<Vulnerability>' reports/dependency-check/*.html 2>/dev/null || echo 0)
-          CKV_COUNT=$(jq '.results | length' reports/checkov/checkov-report.json 2>/dev/null || echo 0)
-          echo "gl_count=$GL_COUNT" >> $GITHUB_ENV
-          echo "dc_count=$DC_COUNT" >> $GITHUB_ENV
-          echo "ckv_count=$CKV_COUNT" >> $GITHUB_ENV
-  
-      - name: Send Slack Notification
+      - name: Send Security Scan Results to Slack
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          GL_COUNT: ${{ needs.secret-scanning.outputs.gl_count }}
+          DC_COUNT: ${{ needs.owasp-dependency-check.outputs.dc_count }}
+          CKV_COUNT: ${{ needs.checkov-scan.outputs.ckv_count }}
         run: |
-          STATUS=$([[ "${{ job.status }}" == "success" ]] && echo "✅ Success" || echo "❌ Issues Found")
-          TEXT="*Security Scan Results*\nStatus: $STATUS\nGitleaks secrets: $GL_COUNT\nOWASP Dependency-Check issues: $DC_COUNT\nCheckov IaC issues: $CKV_COUNT\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\n\nArtifacts:\n• Gitleaks: reports/gitleaks/gitleaks-report.json\n• Dependency-Check: reports/dependency-check/\n• Checkov: reports/checkov/checkov-report.json"
+          if [[ "${{ job.status }}" == "success" ]]; then
+            STATUS=":white_check_mark: Success"
+          else
+            STATUS=":x: Issues Found"
+          fi
+
           curl -X POST -H 'Content-type: application/json' \
-            --data "{\"text\":\"$TEXT\"}" \
-            "$SLACK_WEBHOOK_URL"
+          --data "{
+            \"text\": \"*Security Scan Results*\nStatus: $STATUS\nGitleaks secrets: $GL_COUNT\nOWASP Dependency-Check issues: $DC_COUNT\nCheckov IaC issues: $CKV_COUNT\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\"
+          }" \
+          "$SLACK_WEBHOOK_URL"
